--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,16 @@
 spring.application.name=films
+
+
+
+server.port=8085
+spring.datasource.url=jdbc:mysql://localhost:3306/films_db?createDatabaseIfNotExist=true
+
+spring.jpa.show-sql=true
+
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.username=root
+spring.datasource.password=
+
+
+
+logging.level.org.apache.coyote.http11=DEBUG
